# scProjection

./: README.md  setup.cfg  setup.py
src/scProjection/: __init__.py  architectures.py  batchBackend.py  deconvBackend.py  deconvModel.py  saving_utils.py  utils.py  vaeBackend.py  vaeTrain.py
src/scProjection/scProjection.egg-info/: PKG-INFO  SOURCES.txt
