[metadata]
name = scProjection
version = 0.0.1
author = Nelson Johansen; Gerald Quon
author_email = njjohansen@ucdavis.edu; gquon@ucdavis.edu
description = Projection and Deconvolution using deep heirarchical and generative neural network.
long_description = file: README.md
long_description_content_type = text/markdown
url =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
